<fix>[interactionbar]: fixed styles after component shift

--- a/src/layout/main.module.css
+++ b/src/layout/main.module.css
@@ -9,7 +9,6 @@
     color: var(--font-dark);
 
     padding: var(--outer_wrapper_margin);
-    font-size: var(--title_lg);
 
 
     & p {
